syntax = "proto3";

package message.v1alpha;

import "message/v1alpha/message.proto";


message StreamMessagesRequest {
    Config config = 1;
    oneof message {
        TextMessage text = 2;
    }
}

message StreamMessagesResponse {
    Config config = 1;
    oneof message {
        TextMessage text = 2;
    }
}
